--- a/styles.css
+++ b/styles.css
@@ -2,5 +2,115 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  list-style: none;
 }
 
+body {
+  font-family: Poppins, sans-serif;
+  display: flex;
+  flex-direction: column;
+  background-color: #141414;
+  color: #fff;
+  width: 100vw;
+  height: 100vh;
+}
+
+header {
+  padding: 40px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+header h1 {
+  text-align: center;
+  font-size: 54px;
+}
+
+.container {
+  padding: 0px 40px 0 40px;
+  margin: 0 auto;
+}
+
+.movies {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+  grid-gap: 20px;
+  padding-inline-start: 0;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  width: 100%;
+  height: 370px;
+  transition: all 0.6s;
+}
+
+.card:hover {
+  cursor: pointer;
+}
+
+.card-image {
+  height: 100%;
+  object-fit: cover;
+  position: absolute;
+  width: 100%;
+  opacity: 0.6;
+  border-radius: 15px;
+  z-index: 1;
+}
+
+.card-title,
+.stars-container,
+.card-description {
+  position: absolute;
+  width: 100%;
+  left: 0;
+  padding: 10px;
+  font-weight: 600;
+}
+
+.card-title {
+  bottom: 35px;
+  font-size: 14px;
+  font-weight: bold;
+  z-index: 3;
+}
+
+.stars-container {
+  bottom: 10px;
+  font-size: 12px;
+  z-index: 3;
+}
+
+.stars-container i {
+  margin-right: 5px;
+}
+
+.card-description {
+  opacity: 0;
+  color: #f1f5f9;
+  font-size: 13px;
+}
+
+.has-description:hover .card-description {
+  bottom: 0;
+  opacity: 1;
+  z-index: 4;
+}
+
+.has-description:hover .card-title,
+.has-description:hover .stars-container {
+  transform: translateY(-220%);
+  z-index: 2;
+}
+
+.full-star {
+  color: gold;
+}
+
+.empty-star {
+  color: lightgray;
+}
